removing jquery stuff

--- a/platforms/browser/www/addCard.html
+++ b/platforms/browser/www/addCard.html
@@ -17,5 +17,7 @@ Bottom of card:<br>
 <br><br>
 <input type="submit" value="Add card" onclick="addCard()"/>
 </form> 
-
+<a href = "index.html"> See cards </a>
+<br>
+<a href = "settings.html"> Settings </a>
 </body>
