--- a/platforms/browser/www/remove.html
+++ b/platforms/browser/www/remove.html
@@ -12,5 +12,7 @@ Name of card to be removed:<br>
 </select>
 <input type="submit" value="Remove card" onclick="remCard()">
 </form> 
-
+<a href = "index.html"> See cards </a>
+<br>
+<a href = "settings.html"> Settings </a>
 </body>
